Fix aligning issues with smaller screens

--- a/client/src/components/Artist.css
+++ b/client/src/components/Artist.css
@@ -12,6 +12,7 @@
 .col {
   height: 100px;
 }
+
 .rank {
     font-size: 33px;
     font-weight: 700;
@@ -22,5 +23,10 @@
 .row {
   box-shadow: 0px 0px 2px #000 !important;
   margin-bottom: 5px !important;
+  max-width: 900px;
   height: 100px !important;
+}
+
+.spotifyPage {
+  font-size: 16px;
 }
